# simple-sundials-solver

./: .gitignore  CMakeLists.txt  README.rst
src/: CMakeLists.txt  application_config.in.h  cvodesolver.cxx  cvodesolver.h  main.cxx  model_header.in.h  odesolver.cxx  odesolver.h
